# TokenWaster

./: .gitignore  LICENSE  README.md  README_en.md  config.example.yaml  pyproject.toml
tests/: test_config.py  test_tools.py
tokenwaster/: __main__.py  agent.py  cli.py  config.py  memory.py  prompts.py
tokenwaster/llm/: anthropic_client.py  base.py  gemini_client.py  openai_client.py
tokenwaster/tools/: edit_file.py  list_files.py  read_files.py  read_picture.py  registry.py
